# mymcp

./: .flake8  .gitignore  MCP-repos-directory-tree-20241229.txt  README.md  api.py  app.py  dev-plan-for-mymcp.md  generativeai.pyi  mymcp-prompt.txt  pyproject.toml  pyrightconfig.json  requirements.txt  ruff.toml
.docs/: mcp-reference-for-llm.md
backend/: api.py  app.py  requirements.txt
frontend/: package-lock.json
frontend-vite/: package-lock.json  package.json  vitest.config.js
frontend-vite/src/: App.css  App.jsx  App.test.js  ChefSelector.css  ChefSelector.jsx  Header.css  Header.jsx  LiveStatus.css  LiveStatus.jsx  Menu.css  Menu.jsx  OrderForm.css  OrderForm.jsx  ResultsDisplay.css  ResultsDisplay.jsx  index.css  index.js
frontend/src/: App.css  App.js
generated_server/: config.json  server.py
