[project]
name = "mymcp"
version = "0.3.0"
description = "MCP server management and creation tool"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "aiofiles>=22.0,<24.0",
    "anthropic>=0.7.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.25.0",
    "fastapi>=0.105.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "pymongo>=4.6.0",
    "flask>=3.1.0",
    "flask-cors>=5.0.1",
    "generativeai>=0.0.1",
    "ruff>=0.11.1",
    "google-generativeai==0.8.4",
    "fastmcp>=0.4.1",
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "directory-tree>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "black>=23.0.0", "isort>=5.0.0", "mypy>=1.0.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/mymcp"]
